# android_lab_project_rs_00

./: .gitignore  README.md
Android/: .gitignore  build.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/hk416/android_lab_project_rs_00/sample_application/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/hk416/android_lab_project_rs_00/sample_application/: MainActivity.java
Android/app/src/test/java/com/hk416/android_lab_project_rs_00/sample_application/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
lib/: .gitignore  Cargo.toml
lib/shaders/: color.fs.glsl  color.fs.spv  color.vs.glsl  composite.fs.glsl  composite.fs.spv  composite.vs.glsl  composite.vs.spv  transparent.fs.glsl  transparent.fs.spv  transparent.vs.spv
lib/src/: app.rs  lib.rs  object.rs  scene.rs  timer.rs
lib/src/item/: color.rs  mod.rs  projection.rs  transform.rs
lib/src/render/: mesh.rs  mod.rs  pipeline.rs  texture.rs  uniform.rs
