[package]
name = "lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = [ "HK416 <powerspirit127@gmail.com>" ]
description = "A repository of research and examples for 3D graphics Android applications using `Rust` and `wgpu`."
publish = false

[lib]
name = "framework"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
log = "0.4.*" # MIT or Apache-2.0 license.
serde = { version = "1.0.*", features = ["derive"] } # MIT or Apache-2.0 license.
bytemuck = { version = "1.14.*", features = ["derive"] } # MIT or Apache-2.o license.

wgpu = { version = "0.19.*", features = ["spirv"] } # MIT or Apache-2.0 license.
glam = { version = "0.25.*", features = ["debug-glam-assert", "serde", "bytemuck", "scalar-math"] } # MIT or Apache-2.0 license.

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.*", features = ["android-game-activity"] } # Apache-2.0 license.

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.29.*"

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
target_sdk_version = 24
min_sdk_version = 24